[tool.poetry]
name = "ollama-wrapper-vllm"
version = "0.1.0"
description = ""
authors = ["Anoop Kumar <kumar.anoop11@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
ollama = "^0.1.9"
requests = "^2.32.4"
httpx = ">=0.27.0,<0.28.0"  # Match ollama's requirement

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
